--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr/>
     <a href="./Movie Project.html"><h3>Movie Ranking Project</h3></a>
     <img src="./Screenshot 2025-02-01 at 18.46.34.png" width="500" alt="Screenshot of Movie Project"/>
-    <a href="./Birthday Invite.html"><h3>Birthday Invite Project</h3</a>
+    <a href="./Birthday Invite.html"><h3>Birthday Invite Project</h3</a><br/>
     <img src="./Screenshot 2025-02-01 at 18.47.08.png" width="500" alt="Screenshot of Birthday Project"/>
     <hr/>
     <a href="./Webpages/public/about.html">About Me</a>
